Lesson 15, H/W: display list of resumes (uuid+fullname) and specific resume (except OrgSection's) in servlet

--- a/web/index.html
+++ b/web/index.html
@@ -88,6 +88,8 @@
 
         <!-- content -->
         <td class="td_main_section_content">
+            <a href="/resumes/resume">Сервлет пока что живет тут</a><br>
+
             <!-- test content -->
             <h1>Test</h1>
             <h2>Test</h2>
