Lesson 16, H/W: moving towards completion of the application - added all necessary svg icons; added all necessary JSPs (view.jsp and edit.jsp are drafts; other are finished); refactored rendering of contacts

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -1,4 +1,11 @@
-<%@page pageEncoding="UTF-8" %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <title>База данных резюме</title>
+</head>
+<body>
 <!-- header -->
 <table class="table_header_outer">
     <tbody>
@@ -66,3 +73,80 @@
     </tr>
     </tbody>
 </table>
+
+<!-- main section -->
+<table class="table_main_section">
+    <tbody>
+    <tr>
+        <!-- menu; sorry for the div -->
+        <td class="td_main_section_menu">
+            <div class="rasporka"></div>
+            menu placeholder
+        </td>
+
+        <!-- content -->
+        <td class="td_main_section_content">
+            <a href="/resumes/resume">Сервлет пока что живет тут</a><br>
+
+            <!-- test content -->
+            <h1>Test</h1>
+            <h2>Test</h2>
+            <h3>Test</h3>
+            <h4>Test</h4>
+            <h5>Test</h5>
+            <h6>Test</h6>
+            Test, Test, Test
+            <hr/>
+            <hr/>
+            <pre>Test, Test, Test</pre>
+            <hr/>
+            <p>Test, Test, Test</p>
+            Test, Test, Test
+            <ul>
+                <li>Test</li>
+                <li>Test</li>
+                <li>Test</li>
+            </ul>
+
+            <!-- test table output -->
+            <table class="table_output">
+                <thead class="thead_output">
+                <tr>
+                    <th class="th_td_output">Test</th>
+                    <th class="th_td_output" style="width: 75%;">Test</th>
+                </tr>
+                </thead>
+                <tbody class="tbody_output">
+                <tr>
+                    <td class="th_td_output">Test</td>
+                    <td class="th_td_output">Test</td>
+                </tr>
+                <tr>
+                    <td class="th_td_output">Test</td>
+                    <td class="th_td_output">Test</td>
+                </tr>
+                <tr>
+                    <td class="th_td_output">Test</td>
+                    <td class="th_td_output">Test</td>
+                </tr>
+                </tbody>
+            </table>
+
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+<!-- footer -->
+<table class="table_footer">
+    <tbody>
+    <tr>
+        <td class="td_footer">
+            Учебный проект по курсу <a href="https://javaops.ru/view/basejava" target="_blank">BaseJava</a> (Java SE + Web);
+            <a href="https://github.com/threaddump/BaseJava" target="_blank">исходный код</a> проекта на GitHub
+        </td>
+    </tr>
+    </tbody>
+</table>
+</body>
+</html>
