Lesson 16, H/W: view.jsp is fully functional now

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -108,26 +108,40 @@
                 <li>Test</li>
             </ul>
 
-            <!-- test table output -->
-            <table class="table_output">
-                <thead class="thead_output">
+            <!-- test table for resume listing -->
+            <table class="table_list_resume">
+                <thead class="thead_list_resume">
                 <tr>
-                    <th class="th_td_output">Test</th>
-                    <th class="th_td_output" style="width: 75%;">Test</th>
+                    <th class="th_td_list_resume">Test</th>
+                    <th class="th_td_list_resume" style="width: 75%;">Test</th>
                 </tr>
                 </thead>
-                <tbody class="tbody_output">
+                <tbody class="tbody_list_resume">
                 <tr>
-                    <td class="th_td_output">Test</td>
-                    <td class="th_td_output">Test</td>
+                    <td class="th_td_list_resume">Test</td>
+                    <td class="th_td_list_resume">Test</td>
                 </tr>
                 <tr>
-                    <td class="th_td_output">Test</td>
-                    <td class="th_td_output">Test</td>
+                    <td class="th_td_list_resume">Test</td>
+                    <td class="th_td_list_resume">Test</td>
                 </tr>
                 <tr>
-                    <td class="th_td_output">Test</td>
-                    <td class="th_td_output">Test</td>
+                    <td class="th_td_list_resume">Test</td>
+                    <td class="th_td_list_resume">Test</td>
+                </tr>
+                </tbody>
+            </table>
+
+            <!-- test table for positions listing -->
+            <table class="table_list_positions">
+                <tbody>
+                <tr>
+                    <td class="th_td_list_positions_1">09/1993 - 07/1996</td>
+                    <td class="th_td_list_positions_2"><h6>Аспирантура (программист С, С++)</h6><p>testtesttest</p></td>
+                </tr>
+                <tr>
+                    <td class="th_td_list_positions_1">09/1987 - 07/1993</td>
+                    <td class="th_td_list_positions_2"><h6>Инженер (программист Fortran, C)</h6><p>testtesttest</p></td>
                 </tr>
                 </tbody>
             </table>
