Lesson 16, H/W: resume view is now almost entirely written in jsp

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -136,12 +136,12 @@
             <table class="table_list_positions">
                 <tbody>
                 <tr>
-                    <td class="th_td_list_positions_1">09/1993 - 07/1996</td>
-                    <td class="th_td_list_positions_2"><h6>Аспирантура (программист С, С++)</h6><p>testtesttest</p></td>
+                    <td class="td_list_positions_1">09/1993 - 07/1996</td>
+                    <td class="td_list_positions_2"><h6>Аспирантура (программист С, С++)</h6><p>testtesttest</p></td>
                 </tr>
                 <tr>
-                    <td class="th_td_list_positions_1">09/1987 - 07/1993</td>
-                    <td class="th_td_list_positions_2"><h6>Инженер (программист Fortran, C)</h6><p>testtesttest</p></td>
+                    <td class="td_list_positions_1">09/1987 - 07/1993</td>
+                    <td class="td_list_positions_2"><h6>Инженер (программист Fortran, C)</h6><p>testtesttest</p></td>
                 </tr>
                 </tbody>
             </table>
