Lesson 16, H/W: better css styling for edit form

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -137,14 +137,38 @@
                 <tbody>
                 <tr>
                     <td class="td_list_positions_1">09/1993 - 07/1996</td>
-                    <td class="td_list_positions_2"><h6>Аспирантура (программист С, С++)</h6><p>testtesttest</p></td>
+                    <td class="td_list_positions_2"><h6>Аспирантура (программист С, С++)</h6></td>
                 </tr>
                 <tr>
-                    <td class="td_list_positions_1">09/1987 - 07/1993</td>
-                    <td class="td_list_positions_2"><h6>Инженер (программист Fortran, C)</h6><p>testtesttest</p></td>
+                    <td class="td_list_positions_1"></td>
+                    <td class="td_list_positions_2">testtesttest</td>
                 </tr>
                 </tbody>
             </table>
+
+            <!-- test form -->
+            <form method="post" action="resume" enctype="application/x-www-form-urlencoded">
+
+                <div class="form_div">
+                    <label for="test" class="form_label">Label</label>
+                    <span class="form_span"><input name="test" id="test" type="text" /></span>
+                </div>
+                <div class="form_div">
+                    <label for="test2" class="form_label">Label here more</label>
+                    <span class="form_span"><input name="test2" id="test2" type="text" /></span>
+                </div>
+
+                <h2 style="padding-left: 5px;">h3</h2>
+                <div class="form_div">
+                    <label for="test3" class="form_label">Label</label>
+                    <span class="form_span"><input name="test3" id="test3" type="text" /></span>
+                </div>
+                <div class="form_div">
+                    <label for="test4" class="form_label">Label here more</label>
+                    <span class="form_span"><input name="test4" id="test4" type="text" /></span>
+                </div>
+
+            </form>
 
         </td>
     </tr>
