--- a/web/index_template.html
+++ b/web/index_template.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="js/script.js"></script>
     <title>База данных резюме</title>
 </head>
 <body>
